feat: filter list api
